syntax = "proto3";

package post;
import "google/protobuf/empty.proto";
option go_package = "github.com/SherzodAbdullajonov/service2/pb";

message Post {
    int64 id = 1;
    int64 user_id = 2;
    string title = 3;
    string body = 4;
}

message GetPostRequest {
    int64 post_id = 1;
}

message DeletePostRequest {
    int64 post_id = 1;
}

message ListPostsRequest {
    int64 page = 1;
    int64 limit = 2;
}

message ListPostsResponse {
    repeated Post posts = 1;
}
service PostService {
    rpc GetPost (GetPostRequest) returns (Post);
    rpc ListPosts (ListPostsRequest) returns (ListPostsResponse);
    rpc UpdatePost (Post) returns (google.protobuf.Empty);
    rpc DeletePost (DeletePostRequest) returns (google.protobuf.Empty);
}